# sinch-sdk-python

./: pyproject.toml  ratelimit-test.py
sinch/core/adapters/: requests_http_transport.py
sinch/core/clients/: sinch_client_base.py  sinch_client_sync.py
sinch/core/ports/: http_transport.py
sinch/domains/ratelimit/: __init__.py
sinch/domains/ratelimit/endpoints/httpbin/: __init__.py
