[tool.poetry]
name = "sinch-sdk-python"
version = "0.1.0"
description = ""
authors = ["Fredrik Appelros <fredrik.appelros@sinch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
token-bucket = "^0.3.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
bandit = "^1.7.5"
requests = "^2.31.0"
aiohttp = "^3.8.5"
pytest-asyncio = "^0.21.1"
coverage = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

